[package]
name = "web-server-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
heim = {git = "https://github.com/dilawar/heim.git", features = ["full"]}
serde = "1.0.159"
futures = "*"
sysinfo = "0.28.4"